--- a/blog/templates/blog/blog.html
+++ b/blog/templates/blog/blog.html
@@ -4,4 +4,10 @@
 {% for post in Posts %}
     <h4>{{post.date|date:'d-m-Y'}}<a href='{% url 'detailpost' post.id %}'>{{post.title}}</a></h4>
 {% endfor %}
+{% if page_obj.has_next %}
+    <a href='{{request.path}}?page={{page_obj.next_page_number}}'>Tiếp theo</a>
+{% endif %}
+{% if page_obj.has_previous %}
+    <a href='{{request.path}}?page={{page_obj.previous_page_number}}'>sau theo</a>
+{% endif %}
 {% endblock content %}
